# snakemake-interface-monitor-plugins

./: pyproject.toml
snakemake_interface_monitor_plugins/: common.py  monitor_provider.py  settings.py
snakemake_interface_monitor_plugins/registry/: __init__.py  plugin.py
snakemake_interface_monitoring_plugins/: common.py  monitor.py  monitoring_provider.py  settings.py
snakemake_interface_monitoring_plugins/registry/: __init__.py  plugin.py
