[tool.poetry]
name = "snakemake-interface-monitoring-plugins"
version = "0.1.0"
description = ""
authors = ["Cade Mirchandani <cmirchan@ucsc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
snakemake-interface-common = "^1.12.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
coverage = { extras = ["toml"], version = "^7.3.2" }
flake8 = "^6.1.0"
flake8-bugbear = "^23.3.12"
pytest = "^7.0"
snakemake = { git = "https://github.com/snakemake/snakemake.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
